# internal/server/router.go
@@ -193,6 +193,10 @@ func NewRouter(cfg config.Config, deps *infra.Infra, logger *zap.Logger) http.Ha
 	api.PATCH("/cargo/:id/status", cargoH.PatchStatus)
 	api.POST("/cargo/:id/offers", cargoH.CreateOffer)
 	api.GET("/cargo/:id/offers", cargoH.ListOffers)
+	api.POST("/cargo/:id/photos", cargoH.UploadPhoto)
+	api.GET("/cargo/:id/photos", cargoH.ListPhotos)
+	api.GET("/cargo/:id/photos/:photoId", cargoH.GetPhoto)
+	api.DELETE("/cargo/:id/photos/:photoId", cargoH.DeletePhoto)
 	api.POST("/offers/:id/accept", cargoH.AcceptOffer)
 	api.GET("/trips", tripsH.List)
 	api.GET("/trips/:id", tripsH.Get)
